feat: Allow data to be refreshed via an API call (#771)
* feat: Allow data to be refreshed via an API call

We are currently implementing watchman for some tooling internally and
we need to be able to keep multiple instances of watchman in pretty
tight sync with each other as well as running it behind a sidecar
process. In order do this I wanted to introduce a new API endpoint that
would allow for our sidecar process (or any other reasonable process
that has access to watchman) to trigger a refresh of the data.

In our use case we are pulling lists and caching them in S3, so our
sidecar would be the one downloading the lists from our own S3 and
storing them on the filesystem. The sidecar in this case is also aware
of when a particular list gets updated and so we would want all of the
instances we are running to get the file from S3 and then quickly
refresh the watchman instance so they are all consistently serving the
same data.

This PR is written with the help of Claude code but I'm happy to make
iterations by hand. I don't want to presume anything on the maintainers
here and if there is opposition to this approach for refreshing data
manually I have another idea that I could try to implement to keep
things more locked down (having watchman listen for SIGHUP instead).

* chore: Cleaning up from code review

* chore: simplify download/refresh handler

---------
